# primos-adri

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
