[package]
name = "primos-adri"
version = "0.3.4"
edition = "2021"
description = "Generator and checker of Primos de Adri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
primes = "0.3.0"
regex = "1.9.5"

[lib]
name = "primos_adri"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
