[package]
name = "primos-adri"
version = "0.5.1"
edition = "2024"
description = "Generator and checker of Primos de Adri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
primes = "0.4.0"
regex = "1.12.3"

[lib]
name = "primos_adri"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
